--- a/admin/package.json
+++ b/admin/package.json
@@ -10,17 +10,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "firebase": "^9.19.1",
     "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router": "^6.11.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
     "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
